--- a/LearnBook/GeoQuiz/src/main/res/layout/activity_main.xml
+++ b/LearnBook/GeoQuiz/src/main/res/layout/activity_main.xml
@@ -34,6 +34,14 @@
 
     </LinearLayout>
 
+
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/cheat_button" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
