--- a/LearnBook/GeoQuiz/src/main/res/layout/activity_cheat.xml
+++ b/LearnBook/GeoQuiz/src/main/res/layout/activity_cheat.xml
@@ -26,4 +26,11 @@
         android:layout_height="wrap_content"
         android:text="@string/show_answer_button" />
 
+    <TextView
+        android:id="@+id/show_system_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        tools:text="@string/app_name" />
+
 </LinearLayout>
