--- a/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime_list.xml
+++ b/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime_list.xml
@@ -2,5 +2,5 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/crime_recycler_view"
     android:layout_width="match_parent"
-    android:padding="5dp"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:padding="5dp" />
