LearnBook CriminalIntent update RecyclerView Adapter

--- a/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime.xml
+++ b/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime.xml
@@ -24,13 +24,16 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:background="@android:color/darker_gray"
+                android:contentDescription="@string/crime_photo_no_image_description"
                 android:cropToPadding="true"
+                android:focusable="true"
                 android:scaleType="centerInside" />
 
             <ImageButton
                 android:id="@+id/crime_camera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/crime_photo_button_description"
                 android:src="@android:drawable/ic_menu_camera" />
         </LinearLayout>
 
