LearnBook update chap18 support TalkBack

--- a/LearnBook/CriminalIntent/src/main/res/layout/list_item_crime.xml
+++ b/LearnBook/CriminalIntent/src/main/res/layout/list_item_crime.xml
@@ -12,11 +12,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/crime_date"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/crime_date"
+        app:layout_constraintEnd_toStartOf="@id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
@@ -26,10 +25,28 @@
         android:id="@+id/crime_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/imageView"
+        app:layout_constraintStart_toStartOf="@id/crime_title"
+        app:layout_constraintTop_toBottomOf="@id/crime_title"
+        tools:text="Crime Date" />
+
+
+    <ImageView
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/crime_title"
-        app:layout_constraintTop_toBottomOf="@+id/crime_title"
-        tools:text="Crime Date" />
+        app:layout_constraintStart_toEndOf="@id/crime_title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_solved" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
