--- a/LearnBook/BeatBox/src/main/res/layout/list_item_sound.xml
+++ b/LearnBook/BeatBox/src/main/res/layout/list_item_sound.xml
@@ -13,7 +13,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:onClick="@{(view)->viewModel.onButtonClick(view)}"
+        android:onClick="@{(view)->viewModel.onButtonClick()}"
         android:text="@{viewModel.title}"
         tools:text="soundName">
 
