learn chan22 xml drawable BeatBox
shape ;layer-list; 9Patch图片限制文本内容的显示区域；

--- a/LearnBook/BeatBox/src/main/res/layout/list_item_sound.xml
+++ b/LearnBook/BeatBox/src/main/res/layout/list_item_sound.xml
@@ -10,12 +10,17 @@
 
     </data>
 
-    <Button
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:onClick="@{(view)->viewModel.onButtonClick()}"
-        android:text="@{viewModel.title}"
-        tools:text="soundName">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
 
-    </Button>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="@{(view)->viewModel.onButtonClick()}"
+            android:text="@{viewModel.title}"
+            tools:text="soundName" />
+
+    </FrameLayout>
 </layout>
