--- a/LearnBook/CriminalIntent/src/main/res/layout/list_item_crime.xml
+++ b/LearnBook/CriminalIntent/src/main/res/layout/list_item_crime.xml
@@ -34,19 +34,19 @@
 
 
     <ImageView
-        android:visibility="gone"
-        tools:visibility="visible"
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/crime_title"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_solved" />
+        app:srcCompat="@drawable/ic_solved"
+        tools:visibility="visible" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
