learn chap27 WorkManager PhotoGallery
1.添加了WorkManager依赖库：workManager的使用，设置启动的网络类型，执行一次性任务或者定期执行任务；
2.Worker 的实现：三种返回类型的具体含义；
3.注册通知渠道：registerNotificationChannel 相关的兼容包 NotificationManagerCompat 的使用 ；
4.通知的使用：PendingIntent的使用等；

--- a/LearnBook/PhotoGallery/src/main/res/menu/fragment_photo_gallery.xml
+++ b/LearnBook/PhotoGallery/src/main/res/menu/fragment_photo_gallery.xml
@@ -19,4 +19,9 @@
         android:id="@+id/menu_item_clear"
         android:title="@string/clear_search"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_item_toggle_polling"
+        android:checkable="true"
+        android:title="@string/start_polling"
+        app:showAsAction="never|withText" />
 </menu>
