chap12 CriminalIntent 使用dataBinding
移除Binding.viewRoot.viewTreeObserver.addOnGlobalFocusChangeListener，初步解决内存泄露的问题

--- a/LearnBook/CriminalIntent/src/main/res/navigation/navigation_main.xml
+++ b/LearnBook/CriminalIntent/src/main/res/navigation/navigation_main.xml
@@ -13,6 +13,7 @@
 
         <action
             android:id="@+id/action_list_to_detail"
+            app:popUpTo="@id/CrimeListFragment"
             app:destination="@id/CrimeFragment" />
 
     </fragment>
