GeoQuiz 2.8 挑战练习：为TextView添加监听器

--- a/LearnBook/GeoQuiz/src/main/res/layout/activity_main.xml
+++ b/LearnBook/GeoQuiz/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
             android:id="@+id/pre_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/pre_question"
             android:drawablePadding="4dp"
             android:src="@drawable/arrow_left"
             android:text="@string/next_button" />
@@ -58,6 +59,7 @@
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/next_question"
             android:drawablePadding="4dp"
             android:src="@drawable/arrow_right"
             android:text="@string/next_button" />
