--- a/LearnBook/GeoQuiz/src/main/res/layout-land/activity_main.xml
+++ b/LearnBook/GeoQuiz/src/main/res/layout-land/activity_main.xml
@@ -53,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|bottom"
+        android:contentDescription="@string/pre_question"
         android:drawablePadding="4dp"
         android:src="@drawable/arrow_left"
         android:text="@string/next_button" />
@@ -62,6 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
+        android:contentDescription="@string/next_question"
         android:drawablePadding="4dp"
         android:src="@drawable/arrow_right"
         android:text="@string/next_button" />
