CriminalIntent 使用了mvvm来显示列表
有个问题：使用了ListAdapter与mvvm之后，对于
override fun getItemViewType(position: Int): Int {
        return super.getItemViewType(position)
}
返回多种ViewHolder 反而不好实现了
主要原因是每个list_item_view之间生成的dataBinding类之间都是相互独立的，无法做到封装，因此 “9.10　挑战练习：RecyclerView的ViewType”这一节无法实现

--- a/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime.xml
+++ b/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:baselineAligned="false"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -53,7 +54,8 @@
                 android:id="@+id/crime_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/crime_title_hint" />
+                android:hint="@string/crime_title_hint"
+                android:inputType="text" />
         </LinearLayout>
 
     </LinearLayout>
