--- a/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime_list.xml
+++ b/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,7 +10,9 @@
         android:id="@+id/crime_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="5dp" />
+        android:padding="5dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/list_item_crime" />
 
     <Button
         android:id="@+id/button_add_crime"
