CriminalIntent 使用 navigation-args来传递fragment之间的参数
1.build.gradle、module/build.gradle 增加相应的配置
2.在navigation配置中定义相关的参数
3.在启动的fragment中配置参数，在目标fragment(包括DialogFragment)中接收参数
--
在navigation中来配置并显示dialog(实际上是DialogFragment)

--- a/LearnBook/CriminalIntent/src/main/res/navigation/navigation_main.xml
+++ b/LearnBook/CriminalIntent/src/main/res/navigation/navigation_main.xml
@@ -23,9 +23,28 @@
         android:name="com.by5388.learn.v4.kotlin.criminalintent.CrimeFragment"
         android:label="陋习详情"
         tools:layout="@layout/fragment_crime">
+        <argument
+            android:name="crimeID"
+            app:argType="java.util.UUID"
+            app:nullable="false" />
+        <action
+            android:id="@+id/action_CrimeFragment_to_PhotoFragmentDialog"
+            app:destination="@id/PhotoFragmentDialog" />
 
 
     </fragment>
+
+    <dialog
+        android:id="@+id/PhotoFragmentDialog"
+        android:name="com.by5388.learn.v4.kotlin.criminalintent.PhotoFragment"
+        android:label="图片详情"
+        tools:layout="@layout/fragment_photo">
+        <!-- 传递图片路径 -->
+        <argument
+            android:name="filePath"
+            app:argType="string"
+            app:nullable="false" />
+    </dialog>
 
 
 </navigation>
