Criminal 增加新的日期选择对话框和时间选择对话框
1.使用了navigation来传递参数
2.在代码中使用了接口实现方法调用自身时，会提示没有初始化，这时可以使用lazy来处理这个警告，如下
    private val mDateChangedListener: DatePicker.OnDateChangedListener by lazy {
        DatePicker.OnDateChangedListener { _, year, monthOfYear, dayOfMonth ->
            //如果不加上lazy 下面这行代码会提示mDateChangedListener没有被初始化
            mBinding.datePicker.init(year, monthOfYear, dayOfMonth, mDateChangedListener)
            mCalendar.set(year, monthOfYear, dayOfMonth)
        }
    }

--- a/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime.xml
+++ b/LearnBook/CriminalIntent/src/main/res/layout/fragment_crime.xml
@@ -71,7 +71,13 @@
         android:id="@+id/crime_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Wed Nov 14 11:56 EST 2018" />
+        tools:text="Wed Nov 14 EST 2018" />
+
+    <Button
+        android:id="@+id/crime_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="11:56" />
 
     <CheckBox
         android:id="@+id/crime_solved"
