Criminal 补充在ConstraintLayout中使用include标签失效的说明和解决方式
在ConstraintLayout布局中使用include 需要重新写  android:layout_width，android:layout_height，否则会默认出现在左上角
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <include
        android:id="@+id/button_bar"
        layout="@layout/dialog_button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

参考来源：https://blog.csdn.net/qq_40166103/article/details/115317990

--- a/LearnBook/CriminalIntent/src/main/res/layout/dialog_picker_time.xml
+++ b/LearnBook/CriminalIntent/src/main/res/layout/dialog_picker_time.xml
@@ -14,6 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- 在ConstraintLayout布局中使用include 需要重新写  android:layout_width，android:layout_height -->
+
     <include
         android:id="@+id/button_bar"
         layout="@layout/dialog_button_bar"
