--- a/LearnBook/PhotoGallery/src/main/res/menu/fragment_photo_gallery.xml
+++ b/LearnBook/PhotoGallery/src/main/res/menu/fragment_photo_gallery.xml
@@ -29,4 +29,31 @@
         android:checkable="true"
         android:title="@string/use_chrome_custom_tab"
         app:showAsAction="never|withText" />
+    <!-- 选择适配器 单选 -->
+    <group
+        android:id="@+id/menu_select_adapter"
+        android:checkableBehavior="single"
+        android:enabled="true">
+        <item
+            android:id="@+id/menu_adapter_default"
+            android:checkable="true"
+            android:checked="true"
+            android:title="默认适配器"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/menu_adapter_glide"
+            android:checkable="true"
+            android:checked="false"
+            android:title="Glide适配器"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/menu_adapter_picasso"
+            android:checkable="true"
+            android:checked="false"
+            android:title="Picasso适配器"
+            app:showAsAction="never" />
+
+
+    </group>
+
 </menu>
