--- a/LearnBook/PhotoGallery/src/main/res/menu/fragment_photo_gallery.xml
+++ b/LearnBook/PhotoGallery/src/main/res/menu/fragment_photo_gallery.xml
@@ -53,6 +53,13 @@
             android:title="Picasso适配器"
             app:showAsAction="never" />
 
+        <item
+            android:id="@+id/menu_adapter_fresco"
+            android:checkable="true"
+            android:checked="false"
+            android:title="Fresco适配器"
+            app:showAsAction="never" />
+
 
     </group>
 
