--- a/LearnBook/PhotoGallery/src/main/res/menu/fragment_photo_gallery.xml
+++ b/LearnBook/PhotoGallery/src/main/res/menu/fragment_photo_gallery.xml
@@ -30,65 +30,74 @@
         android:title="@string/use_chrome_custom_tab"
         app:showAsAction="never|withText" />
 
-    <!-- 搜索方式-->
-    <group
-        android:id="@+id/menu_group_search_type"
-        android:checkableBehavior="single"
-        android:enabled="true"
-        android:orderInCategory="1">
-        <item
-            android:id="@+id/menu_photo_type_retrofit"
-            android:checkable="true"
-            android:checked="true"
-            android:title="使用retrofit原生模式" />
-        <item
-            android:id="@+id/menu_photo_type_rxjava"
-            android:checkable="true"
-            android:checked="false"
-            android:title="使用rxjava模式" />
-        <item
-            android:id="@+id/menu_photo_type_coroutines"
-            android:checkable="true"
-            android:checked="false"
-            android:title="使用协程模式" />
+    <item
+        android:id="@+id/menu_search_type"
+        android:title="搜索方式"
+        app:showAsAction="never">
+        <menu>
+            <!-- 搜索方式-->
+            <group
+                android:id="@+id/menu_group_search_type"
+                android:checkableBehavior="single"
+                android:enabled="true"
+                android:orderInCategory="1">
+                <item
+                    android:id="@+id/menu_photo_type_retrofit"
+                    android:checkable="true"
+                    android:checked="true"
+                    android:title="使用retrofit原生模式" />
+                <item
+                    android:id="@+id/menu_photo_type_rxjava"
+                    android:checkable="true"
+                    android:checked="false"
+                    android:title="使用rxjava模式" />
+                <item
+                    android:id="@+id/menu_photo_type_coroutines"
+                    android:checkable="true"
+                    android:checked="false"
+                    android:title="使用协程模式" />
+            </group>
+        </menu>
 
 
-    </group>
+    </item>
 
-
-    <!-- 选择适配器 单选 -->
-    <group
+    <item
         android:id="@+id/menu_select_adapter"
-        android:checkableBehavior="single"
-        android:enabled="true"
-        android:orderInCategory="2">
-        <item
-            android:id="@+id/menu_adapter_default"
-            android:checkable="true"
-            android:checked="true"
-            android:title="默认适配器"
-            app:showAsAction="never" />
-        <item
-            android:id="@+id/menu_adapter_glide"
-            android:checkable="true"
-            android:checked="false"
-            android:title="Glide适配器"
-            app:showAsAction="never" />
-        <item
-            android:id="@+id/menu_adapter_picasso"
-            android:checkable="true"
-            android:checked="false"
-            android:title="Picasso适配器"
-            app:showAsAction="never" />
 
-        <item
-            android:id="@+id/menu_adapter_fresco"
-            android:checkable="true"
-            android:checked="false"
-            android:title="Fresco适配器"
-            app:showAsAction="never" />
+        android:title="适配器类型"
+        app:showAsAction="never">
+        <menu>
+            <!-- 选择适配器 单选 -->
+            <group
+                android:id="@+id/menu_group_select_adapter"
+                android:checkableBehavior="single"
+                android:enabled="true"
+                android:orderInCategory="2">
+                <item
+                    android:id="@+id/menu_adapter_default"
+                    android:checkable="true"
+                    android:checked="true"
+                    android:title="默认适配器" />
+                <item
+                    android:id="@+id/menu_adapter_glide"
+                    android:checkable="true"
+                    android:checked="false"
+                    android:title="Glide适配器" />
+                <item
+                    android:id="@+id/menu_adapter_picasso"
+                    android:checkable="true"
+                    android:checked="false"
+                    android:title="Picasso适配器" />
 
+                <item
+                    android:id="@+id/menu_adapter_fresco"
+                    android:checkable="true"
+                    android:checked="false"
+                    android:title="Fresco适配器" />
+            </group>
+        </menu>
+    </item>
 
-    </group>
 
 </menu>
